# DjangoX

./: .gitignore  pyproject.toml
accounts/: models.py
config/: settings.py  urls.py
snack/: admin.py  models.py  tests.py  urls.py  views.py
snack/migrations/: 0001_initial.py
staticfiles/: staticfiles.json
templates/snack/: base  snack_create.html  snack_delete.html  snack_detail.html  snack_list.html  snack_update.html
